# add-to-zotero-mcp

./: .gitignore  CLAUDE.md  README.md  TODO.md  configure.py  credentials.py  plan.md  requirements.txt  server.py
.claude/: settings.local.json
.github/workflows/: release.yml
assets/icon/: icon.icns
remote_deploy/: pyproject.toml  wrangler.jsonc
remote_deploy/src/: worker.py
server/: index.js  package-lock.json  package.json  zotero.js
setup-app/: main.js  package-lock.json  package.json  preload.js
setup-app/renderer/: app.js  index.html  styles.css
setup-app/scripts/: afterPack.js
