[project]
name = "add-to-zotero-mcp-remote"
version = "1.0.0"
description = "Cloudflare Workers deployment for Zotero MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
